plugins {
    id 'com.android.application'
    id 'com.google.dagger.hilt.android'
}


android {

    defaultConfig {


        packagingOptions {
            exclude 'lib/*/libcrashhelper.so'
            exclude 'lib/*/libcrashtools.so'
        }


//        packagingOptions {
//            doNotStrip '**.so'     // ADD THIS! #1
//        }
//
//        externalNativeBuild.cmake {
//            cppFlags "-Wl,--build-id -g"
//        }

        externalNativeBuild {
            // For ndk-build, instead use the ndkBuild block.
            cmake {
                // Passes optional arguments to CMake.
                arguments "-DANDROID_SUPPORT_FLEXIBLE_PAGE_SIZES=ON"
            }
        }

        javaCompileOptions {
            annotationProcessorOptions {
                arguments += ["room.schemaLocation": "$projectDir/schemas".toString()]
            }
        }


        vectorDrawables.useSupportLibrary = true

        applicationId "com.solarized.firedown"
        minSdkVersion 26
        targetSdkVersion 36
        compileSdk = 36
        versionCode 1176
        versionName "1.1.76"

        ndk {
            abiFilters  "arm64-v8a"
        }

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"

    }

    buildTypes {
        release {
            debuggable false
            minifyEnabled true
            shrinkResources true
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        // Flag to enable support for the new language APIs

        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }
    externalNativeBuild {
        cmake {
            path file('src/main/cpp/CMakeLists.txt')
            version '3.22.1'
        }
    }
    namespace 'com.solarized.firedown'
    buildFeatures {
        buildConfig true
    }
    androidResources {
        ignoreAssetsPattern '!.svn:!.git:!.ds_store:!*.scc:.*:!CVS:!thumbs.db:!picasa.ini:!*~'
        noCompress 'ja'
    }
    // By default the android plugins ignores folders that start with `_`, but
    // we need those in web extensions.
    // See also:
    //  - https://issuetracker.google.com/issues/36911326
    //  - https://stackoverflow.com/questions/9206117/how-to-workaround-autoomitting-fiiles-folders-starting-with-underscore-in
}

ext {
    geckoviewChannel = "lite"
    geckoviewVersion = "151.0.20260525130955"
}



dependencies {

    // Installs the bundled baseline profile (app/src/main/baseline-prof.txt)
    // at first launch so ART AOT-compiles the listed hot methods instead of
    // JITing them during the first cold-start scroll. Pulled transitively by
    // some AndroidX libs already, but pinned explicitly so the profile path
    // doesn't silently regress if those transitive deps move.
    implementation 'androidx.profileinstaller:profileinstaller:1.4.1'

    implementation 'androidx.recyclerview:recyclerview:1.4.0'

    def paging_version = "3.5.0"

    def work_version = "2.11.2"

//    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.14'
//
   // debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.14'

   //+ implementation "com.github.teamnewpipe:NewPipeExtractor:0.24.8"

    // Hilt WorkManager integration
    implementation "androidx.hilt:hilt-work:1.3.0"

    // Annotation processor for Hilt extensions
    annotationProcessor "androidx.hilt:hilt-compiler:1.3.0"

    // Hilt
    implementation "com.google.dagger:hilt-android:2.59.2"
    annotationProcessor "com.google.dagger:hilt-compiler:2.59.2"

    //QR
    implementation 'com.google.zxing:core:3.5.4'

    // For Hilt ViewModel support
    implementation "androidx.hilt:hilt-navigation-compose:1.3.0"

    implementation("androidx.work:work-runtime:$work_version")

    implementation "androidx.paging:paging-runtime:$paging_version"

    implementation 'com.github.bumptech.glide:glide:5.0.7'
    implementation 'com.github.bumptech.glide:recyclerview-integration:5.0.7'
    // Skip this if you don't want to use integration libraries or configure Glide.
    annotationProcessor 'com.github.bumptech.glide:compiler:5.0.7'

    implementation "org.mozilla.geckoview:geckoview:${geckoviewVersion}"

    implementation fileTree(include: ['*.jar', '*.aar'], dir: 'libs')

    implementation "androidx.biometric:biometric:1.1.0"

    implementation 'org.apache.commons:commons-text:1.15.0'

    implementation 'org.apache.commons:commons-collections4:4.5.0'

    implementation 'androidx.media3:media3-exoplayer:1.10.1'

    implementation 'androidx.media3:media3-ui:1.10.1'

    implementation 'commons-io:commons-io:2.22.0'

    implementation 'commons-codec:commons-codec:1.22.0'

    implementation "com.squareup.okhttp3:okhttp-dnsoverhttps:5.3.2"

    implementation 'com.squareup.okhttp3:okhttp:5.3.2'

    implementation 'com.caverock:androidsvg-aar:1.4'

    implementation 'androidx.core:core-splashscreen:1.2.0'

    //nav components
    implementation 'androidx.navigation:navigation-fragment:2.9.8'

    implementation 'androidx.navigation:navigation-ui:2.9.8'

    implementation 'androidx.legacy:legacy-support-v4:1.0.0'

    implementation 'androidx.preference:preference:1.2.1'

    implementation 'androidx.appcompat:appcompat:1.7.1'

    implementation 'com.google.android.material:material:1.14.0'

    testImplementation 'junit:junit:4.13.2'
    androidTestImplementation 'androidx.test.ext:junit:1.3.0'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.7.0'

    def room_version = "2.7.1"

    implementation "androidx.room:room-runtime:$room_version"
    annotationProcessor "androidx.room:room-compiler:$room_version"

    implementation "androidx.room:room-paging:$room_version"

}